Super important commit

--- a/gradient_sign_change/1 STL 10  Adam.ipynb
+++ b/gradient_sign_change/1 STL 10  Adam.ipynb
@@ -124,28 +124,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 233,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-06-18T03:34:30.521916Z",
-     "start_time": "2019-06-18T03:34:30.517914Z"
+     "end_time": "2019-06-18T03:52:15.244405Z",
+     "start_time": "2019-06-18T03:52:15.240395Z"
     }
    },
    "outputs": [],
    "source": [
     "# declare hyper parameter\n",
-    "learning_rate = 0.0001 ; beta1 = 0.9; beta2 = 0.999; adam_e = 1e-8\n",
+    "learning_rate = 0.0008 ; beta1 = 0.9; beta2 = 0.999; adam_e = 1e-8\n",
     "num_epoch     = 100    ; batch_size = 50 ; print_size = 1; \n",
     "channel_sizes = 96 "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 234,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-06-18T03:45:51.531987Z",
-     "start_time": "2019-06-18T03:45:51.489110Z"
+     "end_time": "2019-06-18T03:52:15.528426Z",
+     "start_time": "2019-06-18T03:52:15.486539Z"
     },
     "code_folding": [
      60,
@@ -212,7 +212,7 @@
     "        update_w.append(tf.assign( self.v,self.v*beta2 + (1-beta2) * (grad_new ** 2)   ))\n",
     "        m_hat = self.m / (1-tf.pow(beta1,iter_num))\n",
     "        v_hat = self.v / (1-tf.pow(beta2,iter_num))\n",
-    "        update_w.append(tf.assign( self.w,self.w - learning_rate*( m_hat/(tf.sqrt(v_hat) + adam_e)  + 0.001*self.w )))\n",
+    "        update_w.append(tf.assign( self.w,self.w - learning_rate*( m_hat/(tf.sqrt(v_hat) + adam_e)   )))\n",
     "        return grad_pass,update_w  \n",
     "class tf_batch_norm_layer():\n",
     "    \n",
@@ -298,11 +298,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": 235,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-06-18T03:45:52.005067Z",
-     "start_time": "2019-06-18T03:45:51.825270Z"
+     "end_time": "2019-06-18T03:52:16.060826Z",
+     "start_time": "2019-06-18T03:52:15.887025Z"
     }
    },
    "outputs": [],
@@ -326,11 +326,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": 236,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-06-18T03:49:01.840793Z",
-     "start_time": "2019-06-18T03:49:01.076343Z"
+     "end_time": "2019-06-18T03:52:16.942775Z",
+     "start_time": "2019-06-18T03:52:16.234898Z"
     }
    },
    "outputs": [],
@@ -379,10 +379,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 237,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2019-06-18T03:49:01.538Z"
+     "end_time": "2019-06-18T03:52:18.215744Z",
+     "start_time": "2019-06-18T03:52:17.024296Z"
     }
    },
    "outputs": [],
@@ -397,7 +398,7 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2019-06-18T03:49:01.833Z"
+     "start_time": "2019-06-18T03:52:17.288Z"
     }
    },
    "outputs": [
@@ -405,22 +406,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Current: 1\tTrain Acc: 0.1549999998509884\tTrain Cost: 2.402570707798004\tTest Acc: 0.1723750000121072\tTest Cost: 2.165960454940796\tLR: 0.0001\n",
-      "Current: 2\tTrain Acc: 0.18160000033676624\tTrain Cost: 2.1133396303653718\tTest Acc: 0.1879999997559935\tTest Cost: 2.1243425481021405\tLR: 0.0001\n",
-      "Current: 3\tTrain Acc: 0.2180000003799796\tTrain Cost: 2.067365401983261\tTest Acc: 0.22062500044703484\tTest Cost: 2.0397272765636445\tLR: 0.0001\n",
-      "Current: 4\tTrain Acc: 0.22900000020861624\tTrain Cost: 2.0343031227588653\tTest Acc: 0.22937499950639903\tTest Cost: 2.0048397831618785\tLR: 0.0001\n",
-      "Current: 5\tTrain Acc: 0.25700000047683713\tTrain Cost: 1.998953800201416\tTest Acc: 0.2676250001881272\tTest Cost: 1.9745221443474292\tLR: 0.0001\n",
-      "Current: 6\tTrain Acc: 0.2717999998480082\tTrain Cost: 1.9674012446403504\tTest Acc: 0.27150000049732625\tTest Cost: 1.962543970346451\tLR: 0.0001\n",
-      "Current: 7\tTrain Acc: 0.29159999966621397\tTrain Cost: 1.9369953501224517\tTest Acc: 0.28899999959394335\tTest Cost: 1.9190332643687724\tLR: 0.0001\n",
-      "Current: 8\tTrain Acc: 0.2980000016093254\tTrain Cost: 1.911656572818756\tTest Acc: 0.30475000105798244\tTest Cost: 1.9113104403018952\tLR: 0.0001\n",
-      "Current: 9\tTrain Acc: 0.2993999999761581\tTrain Cost: 1.8928003787994385\tTest Acc: 0.29637500140815976\tTest Cost: 1.8858023323118687\tLR: 0.0001\n",
-      "Current: 10\tTrain Acc: 0.3150000010430813\tTrain Cost: 1.8676633203029633\tTest Acc: 0.3143749999813735\tTest Cost: 1.8588049583137036\tLR: 0.0001\n",
-      "Current: 11\tTrain Acc: 0.3276000013947487\tTrain Cost: 1.847958117723465\tTest Acc: 0.3155000007711351\tTest Cost: 1.842480405420065\tLR: 0.0001\n",
-      "Current: 12\tTrain Acc: 0.3294000017642975\tTrain Cost: 1.8351873421669007\tTest Acc: 0.31900000050663946\tTest Cost: 1.8277217224240303\tLR: 0.0001\n",
-      "Current: 13\tTrain Acc: 0.33040000185370444\tTrain Cost: 1.8208556413650512\tTest Acc: 0.32225000131875275\tTest Cost: 1.817147383838892\tLR: 0.0001\n",
-      "Current: 14\tTrain Acc: 0.34220000088214875\tTrain Cost: 1.8049385142326355\tTest Acc: 0.33500000070780517\tTest Cost: 1.801941564679146\tLR: 0.0001\n",
-      "Current: 15\tTrain Acc: 0.34720000192523004\tTrain Cost: 1.7948299396038054\tTest Acc: 0.32750000143423674\tTest Cost: 1.8016790330410004\tLR: 0.0001\n",
-      "Current: 16\tTrain Acc: 0.3518000023066998\tTrain Cost: 1.77680162191391\tTest Acc: 0.3475000008940697\tTest Cost: 1.7799166329205036\tLR: 0.0001\n"
+      "Current: 1\tTrain Acc: 0.11619999952614307\tTrain Cost: 2.31341454744339\tTest Acc: 0.10899999958928674\tTest Cost: 2.2486004933714865\tLR: 0.0008\n",
+      "Current: 2\tTrain Acc: 0.14280000001192092\tTrain Cost: 2.215692217350006\tTest Acc: 0.15437499990221112\tTest Cost: 2.186542476713657\tLR: 0.0008\n",
+      "Current: 3\tTrain Acc: 0.16060000006109476\tTrain Cost: 2.1657651364803314\tTest Acc: 0.1464999998686835\tTest Cost: 2.1699819080531597\tLR: 0.0008\n",
+      "Current: 4\tTrain Acc: 0.17660000048577784\tTrain Cost: 2.146942209005356\tTest Acc: 0.1988749995827675\tTest Cost: 2.1413419604301454\tLR: 0.0008\n",
+      "Current: 5\tTrain Acc: 0.2056000005453825\tTrain Cost: 2.115199338197708\tTest Acc: 0.23300000005401672\tTest Cost: 2.1012713573873043\tLR: 0.0008\n",
+      "Current: 6\tTrain Acc: 0.22939999938011169\tTrain Cost: 2.0873894667625428\tTest Acc: 0.24424999854527413\tTest Cost: 2.0741000533103944\tLR: 0.0008\n",
+      "Current: 7\tTrain Acc: 0.24299999974668027\tTrain Cost: 2.071706289052963\tTest Acc: 0.2608749996870756\tTest Cost: 2.0565166637301444\tLR: 0.0008\n"
      ]
     }
    ],
