Super important commit

--- a/gradient_sign_change/1 STL 10  Adam.ipynb
+++ b/gradient_sign_change/1 STL 10  Adam.ipynb
@@ -141,11 +141,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 234,
+   "execution_count": 239,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-06-18T03:52:15.528426Z",
-     "start_time": "2019-06-18T03:52:15.486539Z"
+     "end_time": "2019-06-18T03:56:03.778848Z",
+     "start_time": "2019-06-18T03:56:03.727984Z"
     },
     "code_folding": [
      60,
@@ -194,7 +194,7 @@
     "            strides=[1,self.stride,self.stride,1],padding=self.padding\n",
     "        )\n",
     "\n",
-    "        dimension_shape = (0,1,2,3)\n",
+    "        dimension_shape = (2,3)\n",
     "        grad_pos      = tf.where(grad>0,tf.ones_like(grad),tf.zeros_like(grad))\n",
     "        grad_pos_mean = tf.reduce_sum(grad_pos*grad,dimension_shape,keepdims=True)/tf.reduce_sum(grad_pos,dimension_shape,keepdims=True)\n",
     "        \n",
@@ -212,7 +212,7 @@
     "        update_w.append(tf.assign( self.v,self.v*beta2 + (1-beta2) * (grad_new ** 2)   ))\n",
     "        m_hat = self.m / (1-tf.pow(beta1,iter_num))\n",
     "        v_hat = self.v / (1-tf.pow(beta2,iter_num))\n",
-    "        update_w.append(tf.assign( self.w,self.w - learning_rate*( m_hat/(tf.sqrt(v_hat) + adam_e)   )))\n",
+    "        update_w.append(tf.assign( self.w,self.w - learning_rate*( m_hat/(tf.sqrt(v_hat) + adam_e) +0.0001*self.w  )))\n",
     "        return grad_pass,update_w  \n",
     "class tf_batch_norm_layer():\n",
     "    \n",
@@ -298,11 +298,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 235,
+   "execution_count": 240,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-06-18T03:52:16.060826Z",
-     "start_time": "2019-06-18T03:52:15.887025Z"
+     "end_time": "2019-06-18T03:56:04.233894Z",
+     "start_time": "2019-06-18T03:56:04.056106Z"
     }
    },
    "outputs": [],
@@ -326,11 +326,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 236,
+   "execution_count": 241,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-06-18T03:52:16.942775Z",
-     "start_time": "2019-06-18T03:52:16.234898Z"
+     "end_time": "2019-06-18T03:56:05.236146Z",
+     "start_time": "2019-06-18T03:56:04.486982Z"
     }
    },
    "outputs": [],
@@ -379,11 +379,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 237,
+   "execution_count": 242,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-06-18T03:52:18.215744Z",
-     "start_time": "2019-06-18T03:52:17.024296Z"
+     "end_time": "2019-06-18T03:56:06.715807Z",
+     "start_time": "2019-06-18T03:56:05.458549Z"
     }
    },
    "outputs": [],
@@ -398,7 +398,7 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2019-06-18T03:52:17.288Z"
+     "start_time": "2019-06-18T03:56:05.227Z"
     }
    },
    "outputs": [
@@ -406,28 +406,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Current: 1\tTrain Acc: 0.11619999952614307\tTrain Cost: 2.31341454744339\tTest Acc: 0.10899999958928674\tTest Cost: 2.2486004933714865\tLR: 0.0008\n",
-      "Current: 2\tTrain Acc: 0.14280000001192092\tTrain Cost: 2.215692217350006\tTest Acc: 0.15437499990221112\tTest Cost: 2.186542476713657\tLR: 0.0008\n",
-      "Current: 3\tTrain Acc: 0.16060000006109476\tTrain Cost: 2.1657651364803314\tTest Acc: 0.1464999998686835\tTest Cost: 2.1699819080531597\tLR: 0.0008\n",
-      "Current: 4\tTrain Acc: 0.17660000048577784\tTrain Cost: 2.146942209005356\tTest Acc: 0.1988749995827675\tTest Cost: 2.1413419604301454\tLR: 0.0008\n",
-      "Current: 5\tTrain Acc: 0.2056000005453825\tTrain Cost: 2.115199338197708\tTest Acc: 0.23300000005401672\tTest Cost: 2.1012713573873043\tLR: 0.0008\n",
-      "Current: 6\tTrain Acc: 0.22939999938011169\tTrain Cost: 2.0873894667625428\tTest Acc: 0.24424999854527413\tTest Cost: 2.0741000533103944\tLR: 0.0008\n",
-      "Current: 7\tTrain Acc: 0.24299999974668027\tTrain Cost: 2.071706289052963\tTest Acc: 0.2608749996870756\tTest Cost: 2.0565166637301444\tLR: 0.0008\n",
-      "Current: 8\tTrain Acc: 0.28020000077784063\tTrain Cost: 1.9975192189216613\tTest Acc: 0.287625000346452\tTest Cost: 1.9538668476045131\tLR: 0.0008\n",
-      "Current: 9\tTrain Acc: 0.3031999988853931\tTrain Cost: 1.947324012517929\tTest Acc: 0.30837500146590174\tTest Cost: 1.9292350918054582\tLR: 0.0008\n",
-      "Current: 10\tTrain Acc: 0.3253999991714954\tTrain Cost: 1.9028921520709992\tTest Acc: 0.3211250019259751\tTest Cost: 1.9142576470971107\tLR: 0.0008\n",
-      "Current: 11\tTrain Acc: 0.32680000200867654\tTrain Cost: 1.8940315234661103\tTest Acc: 0.34187500132247806\tTest Cost: 1.8900794364511966\tLR: 0.0008\n",
-      "Current: 12\tTrain Acc: 0.3423999983072281\tTrain Cost: 1.8562173402309419\tTest Acc: 0.33525000112131237\tTest Cost: 1.9010819539427757\tLR: 0.0008\n",
-      "Current: 13\tTrain Acc: 0.34940000146627426\tTrain Cost: 1.8375612318515777\tTest Acc: 0.3466250000521541\tTest Cost: 1.8411136969923974\tLR: 0.0008\n",
-      "Current: 14\tTrain Acc: 0.3580000002682209\tTrain Cost: 1.8099985909461975\tTest Acc: 0.36824999991804364\tTest Cost: 1.8221590153872966\tLR: 0.0008\n",
-      "Current: 15\tTrain Acc: 0.36939999982714655\tTrain Cost: 1.799880872964859\tTest Acc: 0.36225000116974115\tTest Cost: 1.8118270337581635\tLR: 0.0008\n",
-      "Current: 16\tTrain Acc: 0.36840000092983244\tTrain Cost: 1.7994374465942382\tTest Acc: 0.37649999959394337\tTest Cost: 1.816596331447363\tLR: 0.0008\n",
-      "Current: 17\tTrain Acc: 0.3898000006377697\tTrain Cost: 1.7629777097702026\tTest Acc: 0.3730000012554228\tTest Cost: 1.8031754523515702\tLR: 0.0008\n",
-      "Current: 18\tTrain Acc: 0.3979999993741512\tTrain Cost: 1.7498970711231232\tTest Acc: 0.3721250005997717\tTest Cost: 1.7920577220618725\tLR: 0.0008\n",
-      "Current: 19\tTrain Acc: 0.39800000071525576\tTrain Cost: 1.7483486998081208\tTest Acc: 0.3716250001452863\tTest Cost: 1.8065660275518893\tLR: 0.0008\n",
-      "Current: 20\tTrain Acc: 0.3906000013649464\tTrain Cost: 1.755607957839966\tTest Acc: 0.3711250005289912\tTest Cost: 1.7984663978219033\tLR: 0.0008\n",
-      "Current: 21\tTrain Acc: 0.40700000151991844\tTrain Cost: 1.7306203877925872\tTest Acc: 0.3718750001862645\tTest Cost: 1.7813168615102768\tLR: 0.0008\n",
-      "Current Iter : 22/100 batch : 3400/5000 acc : 0.26 cost : 2.1385493\r"
+      "Current: 1\tTrain Acc: 0.1265999996289611\tTrain Cost: 2.2982144498825074\tTest Acc: 0.1415000001201406\tTest Cost: 2.297401475906372\tLR: 0.0008\n",
+      "Current Iter : 2/100 batch : 1550/5000 acc : 0.08 cost : 2.3075929\r"
      ]
     }
    ],
