Super important commit

--- a/gradient_sign_change/1 STL 10  Adam.ipynb
+++ b/gradient_sign_change/1 STL 10  Adam.ipynb
@@ -326,11 +326,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 246,
+   "execution_count": 250,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-06-18T03:56:28.449099Z",
-     "start_time": "2019-06-18T03:56:27.726769Z"
+     "end_time": "2019-06-18T04:04:42.676836Z",
+     "start_time": "2019-06-18T04:04:41.966741Z"
     }
    },
    "outputs": [],
@@ -347,7 +347,7 @@
     "\n",
     "layer4  = l4.feedforward(layer3,stride=2);      \n",
     "layer5  = l5.feedforward(layer4);      \n",
-    "layer6  = l6.feedforward(layer5,stride=2)\n",
+    "layer6  = l6.feedforward(layer5)\n",
     "\n",
     "layer7  = l7.feedforward(layer6)\n",
     "layer8  = l8.feedforward(layer7)\n",
@@ -358,7 +358,7 @@
     "cost         = tf.reduce_mean(tf.nn.softmax_cross_entropy_with_logits_v2(logits=final_global,labels=y))\n",
     "accuracy     = tf.reduce_mean(tf.cast(tf.equal(tf.argmax(final_soft, 1), tf.argmax(y, 1)),tf.float32) )\n",
     "\n",
-    "gradient     = tf.tile((final_soft-y)[:,None,None,:],(1,6,6,1))\n",
+    "gradient     = tf.tile((final_soft-y)[:,None,None,:],(1,12,12,1))\n",
     "\n",
     "grad9, grad9_up  = l9. backprop(gradient,iter_num)\n",
     "grad8, grad8_up  = l8. backprop(grad9,iter_num)\n",
@@ -382,7 +382,7 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2019-06-18T03:56:27.833Z"
+     "start_time": "2019-06-18T04:04:42.494Z"
     }
    },
    "outputs": [],
@@ -397,7 +397,7 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2019-06-18T03:56:28.207Z"
+     "start_time": "2019-06-18T04:04:42.795Z"
     }
    },
    "outputs": [
@@ -405,55 +405,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Current: 1\tTrain Acc: 0.11319999936968088\tTrain Cost: 2.3043739891052244\tTest Acc: 0.12325000001583249\tTest Cost: 2.2166033312678337\tLR: 0.0008\n",
-      "Current: 2\tTrain Acc: 0.15580000005662442\tTrain Cost: 2.1811460494995116\tTest Acc: 0.15912500026170165\tTest Cost: 2.167994712293148\tLR: 0.0008\n",
-      "Current: 3\tTrain Acc: 0.19260000046342612\tTrain Cost: 2.1449594485759733\tTest Acc: 0.1969999995548278\tTest Cost: 2.1323969632387163\tLR: 0.0008\n",
-      "Current: 4\tTrain Acc: 0.1810000004246831\tTrain Cost: 2.1443242967128753\tTest Acc: 0.18899999987334012\tTest Cost: 2.136755616217852\tLR: 0.0008\n",
-      "Current: 5\tTrain Acc: 0.20699999935925006\tTrain Cost: 2.1258504259586335\tTest Acc: 0.19099999954923988\tTest Cost: 2.1267018638551236\tLR: 0.0008\n",
-      "Current: 6\tTrain Acc: 0.21379999965429305\tTrain Cost: 2.0627068841457366\tTest Acc: 0.2447499999543652\tTest Cost: 2.0048014782369137\tLR: 0.0008\n",
-      "Current: 7\tTrain Acc: 0.25359999962151053\tTrain Cost: 1.9803357374668122\tTest Acc: 0.26437499979510903\tTest Cost: 1.933762012422085\tLR: 0.0008\n",
-      "Current: 8\tTrain Acc: 0.2683999998867512\tTrain Cost: 1.925458688735962\tTest Acc: 0.2888750005047768\tTest Cost: 1.9108839936554431\tLR: 0.0008\n",
-      "Current: 9\tTrain Acc: 0.2910000003129244\tTrain Cost: 1.8802881109714509\tTest Acc: 0.2781250005587935\tTest Cost: 1.8963817216455936\tLR: 0.0008\n",
-      "Current: 10\tTrain Acc: 0.30420000046491624\tTrain Cost: 1.8477164924144744\tTest Acc: 0.2837499999906868\tTest Cost: 1.8652547888457776\tLR: 0.0008\n",
-      "Current: 11\tTrain Acc: 0.3278000008314848\tTrain Cost: 1.7507730114459992\tTest Acc: 0.33525000205263494\tTest Cost: 1.7499333448708057\tLR: 0.0008\n",
-      "Current: 12\tTrain Acc: 0.3591999998688698\tTrain Cost: 1.685888216495514\tTest Acc: 0.3510000009089708\tTest Cost: 1.7072266548871995\tLR: 0.0008\n",
-      "Current: 13\tTrain Acc: 0.36560000106692314\tTrain Cost: 1.6706398808956147\tTest Acc: 0.35212500002235175\tTest Cost: 1.6769429735839367\tLR: 0.0008\n",
-      "Current: 14\tTrain Acc: 0.3819999992102385\tTrain Cost: 1.6368081498146057\tTest Acc: 0.3718750007450581\tTest Cost: 1.6388199046254157\tLR: 0.0008\n",
-      "Current: 15\tTrain Acc: 0.3889999985694885\tTrain Cost: 1.604161809682846\tTest Acc: 0.3775000010617077\tTest Cost: 1.6617999434471131\tLR: 0.0008\n",
-      "Current: 16\tTrain Acc: 0.403999999165535\tTrain Cost: 1.5776614248752594\tTest Acc: 0.3537500012665987\tTest Cost: 1.7037425979971885\tLR: 0.0008\n",
-      "Current: 17\tTrain Acc: 0.41179999768733977\tTrain Cost: 1.5490198349952697\tTest Acc: 0.40187500016763805\tTest Cost: 1.6045059949159621\tLR: 0.0008\n",
-      "Current: 18\tTrain Acc: 0.43140000075101853\tTrain Cost: 1.5223205363750458\tTest Acc: 0.40187499970197677\tTest Cost: 1.5994032710790633\tLR: 0.0008\n",
-      "Current: 19\tTrain Acc: 0.44279999762773514\tTrain Cost: 1.4788988292217256\tTest Acc: 0.4164999993517995\tTest Cost: 1.5579113394021988\tLR: 0.0008\n",
-      "Current: 20\tTrain Acc: 0.4594000008702278\tTrain Cost: 1.460552784204483\tTest Acc: 0.41887500025331975\tTest Cost: 1.5427235960960388\tLR: 0.0008\n",
-      "Current: 21\tTrain Acc: 0.45039999812841414\tTrain Cost: 1.455084846019745\tTest Acc: 0.42487499956041574\tTest Cost: 1.5349157363176347\tLR: 0.0008\n",
-      "Current: 22\tTrain Acc: 0.4656000006198883\tTrain Cost: 1.43731365442276\tTest Acc: 0.41424999982118604\tTest Cost: 1.5717226214706899\tLR: 0.0008\n",
-      "Current: 23\tTrain Acc: 0.47639999866485594\tTrain Cost: 1.407001532316208\tTest Acc: 0.43312500007450583\tTest Cost: 1.5194270879030227\tLR: 0.0008\n",
-      "Current: 24\tTrain Acc: 0.48839999943971635\tTrain Cost: 1.3781224989891052\tTest Acc: 0.43337499964982273\tTest Cost: 1.5231150805950164\tLR: 0.0008\n",
-      "Current: 25\tTrain Acc: 0.4843999990820885\tTrain Cost: 1.3770118188858032\tTest Acc: 0.43149999836459757\tTest Cost: 1.5322996005415916\tLR: 0.0008\n",
-      "Current: 26\tTrain Acc: 0.4973999989032745\tTrain Cost: 1.3614635223150253\tTest Acc: 0.45124999824911355\tTest Cost: 1.4865171141922473\tLR: 0.0008\n",
-      "Current: 27\tTrain Acc: 0.513200002014637\tTrain Cost: 1.3269730639457702\tTest Acc: 0.4465000002644956\tTest Cost: 1.5128979139029979\tLR: 0.0008\n",
-      "Current: 28\tTrain Acc: 0.5071999984979629\tTrain Cost: 1.3375556933879853\tTest Acc: 0.45775000043213365\tTest Cost: 1.4896407544612884\tLR: 0.0008\n",
-      "Current: 29\tTrain Acc: 0.5206000018119812\tTrain Cost: 1.2926632630825043\tTest Acc: 0.44674999825656414\tTest Cost: 1.50099833086133\tLR: 0.0008\n",
-      "Current: 30\tTrain Acc: 0.5237999999523163\tTrain Cost: 1.2830020600557328\tTest Acc: 0.4431249976158142\tTest Cost: 1.5222473964095116\tLR: 0.0008\n",
-      "Current: 31\tTrain Acc: 0.5347999992966652\tTrain Cost: 1.264066560268402\tTest Acc: 0.4476249985396862\tTest Cost: 1.5048045255243778\tLR: 0.0008\n",
-      "Current: 32\tTrain Acc: 0.5412000018358231\tTrain Cost: 1.2436950707435608\tTest Acc: 0.4427499990910292\tTest Cost: 1.5097963497042657\tLR: 0.0008\n",
-      "Current: 33\tTrain Acc: 0.5512000024318695\tTrain Cost: 1.2232524544000625\tTest Acc: 0.46549999844282863\tTest Cost: 1.4642111927270889\tLR: 0.0008\n",
-      "Current: 34\tTrain Acc: 0.5616000014543533\tTrain Cost: 1.1969724893569946\tTest Acc: 0.44487499799579383\tTest Cost: 1.5132365673780441\tLR: 0.0008\n",
-      "Current: 35\tTrain Acc: 0.5563999998569489\tTrain Cost: 1.2064011162519455\tTest Acc: 0.4493749985471368\tTest Cost: 1.4952227666974067\tLR: 0.0008\n",
-      "Current: 36\tTrain Acc: 0.5705999997258187\tTrain Cost: 1.1687747675180435\tTest Acc: 0.46874999832361935\tTest Cost: 1.4832599125802517\tLR: 0.0008\n",
-      "Current: 37\tTrain Acc: 0.581200000345707\tTrain Cost: 1.145725075006485\tTest Acc: 0.4689999999478459\tTest Cost: 1.4786117792129516\tLR: 0.0008\n",
-      "Current: 38\tTrain Acc: 0.588800003528595\tTrain Cost: 1.125016307234764\tTest Acc: 0.4718749998137355\tTest Cost: 1.462240146100521\tLR: 0.0008\n",
-      "Current: 39\tTrain Acc: 0.5940000033378601\tTrain Cost: 1.1086900788545608\tTest Acc: 0.470249998755753\tTest Cost: 1.4957357078790665\tLR: 0.0008\n",
-      "Current: 40\tTrain Acc: 0.5916000017523766\tTrain Cost: 1.1177078807353973\tTest Acc: 0.46737500056624415\tTest Cost: 1.505646252632141\tLR: 0.0008\n",
-      "Current: 41\tTrain Acc: 0.6050000035762787\tTrain Cost: 1.0902547144889831\tTest Acc: 0.4714999973773956\tTest Cost: 1.5007297724485398\tLR: 0.0008\n",
-      "Current: 42\tTrain Acc: 0.6118000027537346\tTrain Cost: 1.0666439753770829\tTest Acc: 0.4613749995827675\tTest Cost: 1.5618734918534756\tLR: 0.0008\n",
-      "Current: 43\tTrain Acc: 0.6136000061035156\tTrain Cost: 1.0554561173915864\tTest Acc: 0.4753750002011657\tTest Cost: 1.4916264295578003\tLR: 0.0008\n",
-      "Current: 44\tTrain Acc: 0.6200000050663949\tTrain Cost: 1.0347552132606506\tTest Acc: 0.47624999899417164\tTest Cost: 1.5097122564911842\tLR: 0.0008\n",
-      "Current: 45\tTrain Acc: 0.6460000061988831\tTrain Cost: 0.9871437335014344\tTest Acc: 0.47299999855458735\tTest Cost: 1.5245232578366994\tLR: 0.0008\n",
-      "Current: 46\tTrain Acc: 0.6378000044822693\tTrain Cost: 1.0016336756944657\tTest Acc: 0.44287499878555536\tTest Cost: 1.683006926625967\tLR: 0.0008\n",
-      "Current: 47\tTrain Acc: 0.6374000042676926\tTrain Cost: 1.0055821150541306\tTest Acc: 0.4654999988153577\tTest Cost: 1.5551680698990822\tLR: 0.0008\n",
-      "Current: 48\tTrain Acc: 0.6670000049471855\tTrain Cost: 0.933031792640686\tTest Acc: 0.4706249997019768\tTest Cost: 1.5508053131401538\tLR: 0.0008\n",
-      "Current Iter : 49/100 batch : 2850/8000 acc : 0.44 cost : 1.63006414\r"
+      "Current: 1\tTrain Acc: 0.5366000005230308\tTrain Cost: 2.7662681519985197\tTest Acc: 0.099999999278225\tTest Cost: 2.2831974998116493\tLR: 0.0008\n",
+      "Current: 2\tTrain Acc: 0.12919999945908786\tTrain Cost: 2.1958364748954775\tTest Acc: 0.11362499955575914\tTest Cost: 2.1689539030194283\tLR: 0.0008\n",
+      "Current: 3\tTrain Acc: 0.1527999997138977\tTrain Cost: 2.158781841993332\tTest Acc: 0.16800000036600976\tTest Cost: 2.1563137039542197\tLR: 0.0008\n",
+      "Current Iter : 4/100 batch : 5750/8000 acc : 0.08 cost : 2.3089488\r"
      ]
     }
    ],
