Super important commit

--- a/gradient_sign_change/1 STL 10  Adam.ipynb
+++ b/gradient_sign_change/1 STL 10  Adam.ipynb
@@ -341,11 +341,11 @@
     "is_train = tf.placeholder_with_default(True,())\n",
     "iter_num = tf.placeholder_with_default(1.0,())\n",
     "\n",
-    "layer1  = l1. feedforward(x,stride=2)    \n",
+    "layer1  = l1. feedforward(x)    \n",
     "layer2  = l2.feedforward(layer1) \n",
-    "layer3  = l3.feedforward(layer2,stride=2); \n",
+    "layer3  = l3.feedforward(layer2); \n",
     "\n",
-    "layer4  = l4.feedforward(layer3,stride=2);      \n",
+    "layer4  = l4.feedforward(layer3);      \n",
     "layer5  = l5.feedforward(layer4);      \n",
     "layer6  = l6.feedforward(layer5)\n",
     "\n",
