--- a/gradient_sign_change/1 STL 10  Adam.ipynb
+++ b/gradient_sign_change/1 STL 10  Adam.ipynb
@@ -341,8 +341,8 @@
     "is_train = tf.placeholder_with_default(True,())\n",
     "iter_num = tf.placeholder_with_default(1.0,())\n",
     "\n",
-    "layer1  = l1. feedforward(x)    \n",
-    "layer2  = l2.feedforward(layer1) \n",
+    "layer1  = l1. feedforward(x,stride=2)    \n",
+    "layer2  = l2.feedforward(layer1,stride=2) \n",
     "layer3  = l3.feedforward(layer2); \n",
     "\n",
     "layer4  = l4.feedforward(layer3);      \n",
@@ -407,7 +407,8 @@
      "output_type": "stream",
      "text": [
       "Current: 1\tTrain Acc: 0.11519999995827675\tTrain Cost: 2.3133484935760498\tTest Acc: 0.11424999951850623\tTest Cost: 2.2997334241867065\tLR: 0.0008\n",
-      "Current Iter : 2/100 batch : 200/8000 acc : 0.2 cost : 2.296852485\r"
+      "Current: 2\tTrain Acc: 0.12859999913722275\tTrain Cost: 2.2953044319152833\tTest Acc: 0.1572499999543652\tTest Cost: 2.2758788973093034\tLR: 0.0008\n",
+      "Current Iter : 3/100 batch : 1950/8000 acc : 0.08 cost : 2.2755394\r"
      ]
     }
    ],
