Super important commit

--- a/gradient_sign_change/1 STL 10  Adam.ipynb
+++ b/gradient_sign_change/1 STL 10  Adam.ipynb
@@ -212,7 +212,7 @@
     "        update_w.append(tf.assign( self.v,self.v*beta2 + (1-beta2) * (grad_new ** 2)   ))\n",
     "        m_hat = self.m / (1-tf.pow(beta1,iter_num))\n",
     "        v_hat = self.v / (1-tf.pow(beta2,iter_num))\n",
-    "        update_w.append(tf.assign( self.w,self.w - learning_rate*( m_hat/(tf.sqrt(v_hat) + adam_e) +0.0001*self.w  )))\n",
+    "        update_w.append(tf.assign( self.w,self.w - learning_rate*( m_hat/(tf.sqrt(v_hat) + adam_e)   )))\n",
     "        return grad_pass,update_w  \n",
     "class tf_batch_norm_layer():\n",
     "    \n",
@@ -411,7 +411,11 @@
       "Current: 3\tTrain Acc: 0.1534000002220273\tTrain Cost: 2.1643264627456666\tTest Acc: 0.1632499996572733\tTest Cost: 2.16370133459568\tLR: 0.0008\n",
       "Current: 4\tTrain Acc: 0.16520000040531158\tTrain Cost: 2.161816649436951\tTest Acc: 0.16600000003818421\tTest Cost: 2.1610583826899528\tLR: 0.0008\n",
       "Current: 5\tTrain Acc: 0.1654000000655651\tTrain Cost: 2.1593791675567626\tTest Acc: 0.17049999970477075\tTest Cost: 2.1612074360251428\tLR: 0.0008\n",
-      "Current Iter : 6/100 batch : 7050/8000 acc : 0.22 cost : 2.0749242\r"
+      "Current: 6\tTrain Acc: 0.1657999998703599\tTrain Cost: 2.1572185587882995\tTest Acc: 0.1653749997029081\tTest Cost: 2.1563120067119597\tLR: 0.0008\n",
+      "Current: 7\tTrain Acc: 0.15740000039339067\tTrain Cost: 2.154086104631424\tTest Acc: 0.16462499995250254\tTest Cost: 2.1527154602110388\tLR: 0.0008\n",
+      "Current: 8\tTrain Acc: 0.1703999999165535\tTrain Cost: 2.1511280226707457\tTest Acc: 0.172874999884516\tTest Cost: 2.1504277542233465\tLR: 0.0008\n",
+      "Current: 9\tTrain Acc: 0.16480000030249356\tTrain Cost: 2.1506146121025087\tTest Acc: 0.1773750002263114\tTest Cost: 2.1523798957467077\tLR: 0.0008\n",
+      "Current: 10\tTrain Acc: 0.16520000018179418\tTrain Cost: 2.1472938227653504\tTest Acc: 0.13237499995157123\tTest Cost: 2.1477106370031835\tLR: 0.0008\n"
      ]
     }
    ],
