Super important commit

--- a/gradient_sign_change/1 STL 10  Adam.ipynb
+++ b/gradient_sign_change/1 STL 10  Adam.ipynb
@@ -400,7 +400,24 @@
      "start_time": "2019-06-18T04:19:16.686Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Current: 1\tTrain Acc: 0.14980000037699936\tTrain Cost: 2.2671061325073243\tTest Acc: 0.15950000016018748\tTest Cost: 2.2216994643211363\tLR: 0.0001\n",
+      "Current: 2\tTrain Acc: 0.1607999998703599\tTrain Cost: 2.177944750785828\tTest Acc: 0.16662499997764826\tTest Cost: 2.1581659995019438\tLR: 0.0001\n",
+      "Current: 3\tTrain Acc: 0.19500000063329936\tTrain Cost: 2.1385667526721956\tTest Acc: 0.2137499992037192\tTest Cost: 2.131424367427826\tLR: 0.0001\n",
+      "Current: 4\tTrain Acc: 0.2348000006377697\tTrain Cost: 2.0733310866355894\tTest Acc: 0.24512500006239862\tTest Cost: 2.0505366303026675\tLR: 0.0001\n",
+      "Current: 5\tTrain Acc: 0.2516000007092953\tTrain Cost: 2.011458321809769\tTest Acc: 0.2586250002961606\tTest Cost: 1.9819840013980865\tLR: 0.0001\n",
+      "Current: 6\tTrain Acc: 0.28559999987483026\tTrain Cost: 1.9006473350524902\tTest Acc: 0.28025000020861623\tTest Cost: 1.8806950621306897\tLR: 0.0001\n",
+      "Current: 7\tTrain Acc: 0.3094000007212162\tTrain Cost: 1.809386395215988\tTest Acc: 0.3372500013560057\tTest Cost: 1.7689109817147255\tLR: 0.0001\n",
+      "Current: 8\tTrain Acc: 0.3420000013709068\tTrain Cost: 1.7427554404735566\tTest Acc: 0.3550000010989606\tTest Cost: 1.717304202914238\tLR: 0.0001\n",
+      "Current: 9\tTrain Acc: 0.3464000017940998\tTrain Cost: 1.7113901555538178\tTest Acc: 0.35025000004097817\tTest Cost: 1.74610583037138\tLR: 0.0001\n",
+      "Current Iter : 10/100 batch : 1800/5000 acc : 0.36 cost : 1.5508871\r"
+     ]
+    }
+   ],
    "source": [
     "# start the training \n",
     "for iter in range(1,num_epoch+1):\n",
