Super important commit

--- a/gradient_sign_change/1 STL 10  Adam.ipynb
+++ b/gradient_sign_change/1 STL 10  Adam.ipynb
@@ -461,7 +461,23 @@
       "Current: 54\tTrain Acc: 0.5844000035524368\tTrain Cost: 1.1485845375061035\tTest Acc: 0.485124999564141\tTest Cost: 1.4061213284730911\tLR: 0.0001\n",
       "Current: 55\tTrain Acc: 0.5900000056624413\tTrain Cost: 1.1390219300985336\tTest Acc: 0.4913749981671572\tTest Cost: 1.3910585541278124\tLR: 0.0001\n",
       "Current: 56\tTrain Acc: 0.5956000038981437\tTrain Cost: 1.1289336782693864\tTest Acc: 0.5023750010877848\tTest Cost: 1.3603509359061718\tLR: 0.0001\n",
-      "Current Iter : 57/100 batch : 7550/8000 acc : 0.46 cost : 1.39672714\r"
+      "Current: 57\tTrain Acc: 0.5930000025033951\tTrain Cost: 1.1391110116243361\tTest Acc: 0.5032499989494681\tTest Cost: 1.3788435734808444\tLR: 0.0001\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Current: 58\tTrain Acc: 0.6084000024199486\tTrain Cost: 1.1092459243535995\tTest Acc: 0.48750000055879356\tTest Cost: 1.412041464447975\tLR: 0.0001\n",
+      "Current: 59\tTrain Acc: 0.5986000025272369\tTrain Cost: 1.1115005493164063\tTest Acc: 0.4879999991506338\tTest Cost: 1.4051990307867528\tLR: 0.0001\n",
+      "Current: 60\tTrain Acc: 0.5922000029683113\tTrain Cost: 1.1298802465200424\tTest Acc: 0.4997500002384186\tTest Cost: 1.3842106632888318\tLR: 0.0001\n",
+      "Current: 61\tTrain Acc: 0.622800005376339\tTrain Cost: 1.0724905800819398\tTest Acc: 0.492625000141561\tTest Cost: 1.4119059335440398\tLR: 0.0001\n",
+      "Current: 62\tTrain Acc: 0.6112000024318696\tTrain Cost: 1.0903642469644546\tTest Acc: 0.5144999999552965\tTest Cost: 1.3471148263663053\tLR: 0.0001\n",
+      "Current: 63\tTrain Acc: 0.6166000041365624\tTrain Cost: 1.0874566942453385\tTest Acc: 0.49587499890476466\tTest Cost: 1.4022948019206525\tLR: 0.0001\n",
+      "Current: 64\tTrain Acc: 0.6282000070810319\tTrain Cost: 1.0632027864456177\tTest Acc: 0.4997500002384186\tTest Cost: 1.4031257651746274\tLR: 0.0001\n",
+      "Current: 65\tTrain Acc: 0.6154000049829483\tTrain Cost: 1.0701404529809952\tTest Acc: 0.4918750001117587\tTest Cost: 1.413779553025961\tLR: 0.0001\n",
+      "Current: 66\tTrain Acc: 0.6242000025510788\tTrain Cost: 1.041240918636322\tTest Acc: 0.5034999994561076\tTest Cost: 1.3695080183446406\tLR: 0.0001\n",
+      "Current Iter : 67/100 batch : 3100/5000 acc : 0.58 cost : 1.17786696\r"
      ]
     }
    ],
