Super important commit

--- a/gradient_sign_change/1 STL 10  Adam.ipynb
+++ b/gradient_sign_change/1 STL 10  Adam.ipynb
@@ -379,10 +379,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 311,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2019-06-18T04:19:16.171Z"
+     "end_time": "2019-06-18T04:19:18.825220Z",
+     "start_time": "2019-06-18T04:19:16.721195Z"
     }
    },
    "outputs": [],
@@ -394,10 +395,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 312,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2019-06-18T04:19:16.686Z"
+     "end_time": "2019-06-18T04:40:17.500511Z",
+     "start_time": "2019-06-18T04:19:19.052687Z"
     }
    },
    "outputs": [
@@ -506,7 +508,11 @@
       "Current: 93\tTrain Acc: 0.7300000011920929\tTrain Cost: 0.774997444152832\tTest Acc: 0.5406249992549419\tTest Cost: 1.3573920346796513\tLR: 0.0001\n",
       "Current: 94\tTrain Acc: 0.7335999989509583\tTrain Cost: 0.7616007971763611\tTest Acc: 0.5272500006482005\tTest Cost: 1.4117686398327352\tLR: 0.0001\n",
       "Current: 95\tTrain Acc: 0.7228000026941299\tTrain Cost: 0.7841838037967682\tTest Acc: 0.5172500004991889\tTest Cost: 1.4162858590483665\tLR: 0.0001\n",
-      "Current Iter : 96/100 batch : 1250/5000 acc : 0.8 cost : 0.704241524\r"
+      "Current: 96\tTrain Acc: 0.7428000032901764\tTrain Cost: 0.7376065957546234\tTest Acc: 0.5328750006854535\tTest Cost: 1.3971166372299195\tLR: 0.0001\n",
+      "Current: 97\tTrain Acc: 0.7434000009298325\tTrain Cost: 0.7423372802138328\tTest Acc: 0.5391249993816019\tTest Cost: 1.3442225050181151\tLR: 0.0001\n",
+      "Current: 98\tTrain Acc: 0.7510000002384186\tTrain Cost: 0.7194162374734878\tTest Acc: 0.5271250002086163\tTest Cost: 1.410714139416814\tLR: 0.0001\n",
+      "Current: 99\tTrain Acc: 0.7485999995470047\tTrain Cost: 0.7289733162522316\tTest Acc: 0.5425000011920929\tTest Cost: 1.3542130816727878\tLR: 0.0001\n",
+      "Current: 100\tTrain Acc: 0.7581999987363816\tTrain Cost: 0.7102452808618546\tTest Acc: 0.5266249993816018\tTest Cost: 1.4366799093782903\tLR: 0.0001\n"
      ]
     }
    ],
